= CHANGES

== 0.9.7 (unreleased)

* removed duplicate app folder in project skeleton.

== 0.9.6

* Fixed an issue in controller generator when using --app=app_name
* Added mm:transate task for easily translate models
* Updated favicon_tag to search inside images folder 
* Fixes an issue with rendering with layout false now you can use: render 'path/to/template', :layout => false
* Small helpers refactoring
* fixed mailer initializer issue. cleaned up options in delivery.rb
* fixes tests in padrino helper. stubs Padrino.root

== 0.9.5

* Added the possibility for dsl lovers to create a single file in app called helpers.rb/controllers.rb/mailers.rb
* Changed generated scaffold now table rows didn't contains links
* Fixed a bug in reloader, now we prevent schema.rb reloading
* Fixed check_box helper when :checked => false we remove them
* Added auto template lookup with locale and format i.e: show.ru.js.erb or show.js.erb or show.en.erb
* Css refactoring and fixed an unused css in Padrino Admin generator
* Fixed ar:structure:dump and others tasks that don't use symbols
* Fixed compatibility with ERB and Sinatra 1.0
* Fixed an issues with index and ar:auto:upgrade
* Now we use Sinatra 0.9.6 since previous versions on ruby >= 1.8.7-p248 raise a segfault bug
* Refactored executables
* Added strip_tags helper
* Fixed model_attribute_translate helper
* Added favicon
* Prevent bundler gem clashing
* Fixed minor SASS support issue for haml generated projects

== 0.9.4

* Improved select_tag helper, now accept :include_blank => 'My text' 
* Re-require 'tilt' since not all of us use sinatra --pre
* Fixed a strange api change of bundler (see: http://github.com/carlhuda/bundler/issues/closed#issue/160)
* Removed Bundler 0.9.7 dependency and allow all versions > 0.9.7.
* Fixed Padrino Mailer views_path when we use a "multi app" project
* Fixed content_type in Padrino Mailer
* Added a spec option -fs 
* Removed rspec.opts and use it directly in rake task.

== 0.9.3
